<resources>
    <string name="app_name">Keine Armut</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Mobile</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="user_name">username</string>
    <string name="email_id">Email</string>
    <string name="login_button">Login</string>
    <string name="or">or</string>
    <string name="image_content_descritpion">Google Sign In</string>
    <string name="default_web_client_id">980841101419-mus4beag1ququg6mo496j1u0ts62oleb.apps.googleusercontent.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="state">Successfully Signed in</string>
    <string name="google_sign_in">Sign With Google</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="welcome_message">Welcome Back!!</string>
    <string name="display_username">%1$s</string>
    <string name="home">Home</string>
    <string name="email">%1$s</string>
    <string name="uid">%1$s</string>
    <string name="message">Message</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_content_description">Profile_Picture</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_logout">Logout</string>
    <string name="text_with_clickable_span">Dont have an account?<span id="clickable_text" textColor="black"> Sign up </span> </string>
    <string name="drop_down1">Work Class</string>
    <string name="drop_down2">Education</string>
    <string name="drop_down3">Marital Status</string>
    <string name="select_item">Select Item</string>
    <string name="Result"></string>
    <string-array name="dropdown_menu">
        <item>Formal</item>
        <item>Self</item>
        <item>Unemployed</item>
    </string-array>
    <string-array name="dropdown_menu2">
        <item>dropout</item>
        <item>HS dropout</item>
        <item>HS-grad</item>
        <item>Intermediate Education</item>
        <item>Bachelors/Doctoral</item>
    </string-array>
    <string-array name="dropdown_menu3">
        <item>Never Married</item>
        <item>Currently Married</item>
        <item>Previously Married</item>
    </string-array>

</resources>